--- a/VRChat/73/1283573.html
+++ b/VRChat/73/1283573.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "OpUKIEpH9gQIb1R+Kwgj7mG/qwQFfIT8GxzsOOyNsak="></script>
+    "3mPpWBKX4E542JRZ5ie9U3QWO2+mnIw6ZqRKtjqzWU4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"埼玉Forceバッジ","description":"埼玉Forceバッジのテクスチャです\nUnity上でPlaneに貼り付けるとバッジっぽくなります\n透過処理してくれるシェーダを使用してください","url":"https://booth.pm/ja/items/1283573","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/019515fd-e522-4869-b704-06114a605fa9/i/1283573/8d6a1a04-6699-4629-9464-0f5042c741ba_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="OpUKIEpH9gQIb1R+Kwgj7mG/qwQFfIT8GxzsOOyNsak="></script>
+    nonce="3mPpWBKX4E542JRZ5ie9U3QWO2+mnIw6ZqRKtjqzWU4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1283573/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               4
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1283573/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               4
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
