--- a/VRChat/27/1283427.html
+++ b/VRChat/27/1283427.html
@@ -98,9 +98,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "h+/SyZJmAmBjQrd5ybkRTqJBcjKZOx3JVmLRF4fHQs4="></script>
+    "OeEvdXViZyJvIQKwmWHgPOEXzQOil90lELNpZCGJgIM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"テーブルとイス","description":"3/23　イス4追加しました。レザーのテクスチャ1枚を追加しました。\n\nBlenderでテーブルとイスを作りました。\nお好みでテクスチャやマテリアルの設定を変更してお使いください。\nサムネイルに映っているものが全てです。（テーブル4、イス7）\n\n\nVRChatで色々な人が物を作っているので自分もとりあえず作ってみたといったところです。\n素人が初めて作ってみたものですので不備、不具合は大目に見てください。\nですが、何かお気づきのことがございましたら教えていただけると今後の糧となります。\n\n\nfbxファイル制作：Pianna\nテクスチャ（leather）撮影：Pianna\n\nUnityパッケージに含まれるテクスチャ2枚（wood,fabric）は下記サイトのものです。\nhttps://www.sharetextures.com/\n\n","url":"https://booth.pm/ja/items/1283427","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/35109731-1a22-4535-a2f0-5dd6f73a477e/i/1283427/c0a0aa1f-afd9-4efd-a6a7-e5e88331141f_base_resized.jpg"}
     </script>
@@ -111,7 +111,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="h+/SyZJmAmBjQrd5ybkRTqJBcjKZOx3JVmLRF4fHQs4="></script>
+    nonce="OeEvdXViZyJvIQKwmWHgPOEXzQOil90lELNpZCGJgIM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -135,6 +135,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -178,7 +180,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1283427/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               144
@@ -193,14 +195,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1283427/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               144
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
