--- a/VRChat/03/1283303.html
+++ b/VRChat/03/1283303.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "jbFDTUHCEiUKz2wBMoWalOnuyxU34+02Cjh8T/V9omI="></script>
+    "qsgMFVzXdK4iCpjYrXKnoK67mj9sgSgAV0HpcMphdOE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRchat向けオリジナル３Dモデル「ショロ」 Ver.2!!","description":"VRchat向けオリジナル３Dモデル「ショロ」 Ver.2!!\nVRCでの使用を想定したキツネアバターです。\n\nBoost版にはQuestでも使える超ローポリ版も同梱！\n\n◆ 2019/07/09 追記\nQuestでも使える超ローポリ版モデルとアニメーションファイルを追加！\nすでにBoost版を購入している方は無償でダウンロードできます！アニメーションファイルは通常版にも同梱！","url":"https://booth.pm/ja/items/1283303","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"300","highPrice":"800"},"image":"https://booth.pximg.net/c/620x620/7db76cf7-7e72-4f84-ba1d-0ba63d5cdd5b/i/1283303/20393386-2b9b-4860-a448-f4085c7f5684_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="jbFDTUHCEiUKz2wBMoWalOnuyxU34+02Cjh8T/V9omI="></script>
+    nonce="qsgMFVzXdK4iCpjYrXKnoK67mj9sgSgAV0HpcMphdOE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1283303/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               121
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1283303/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               121
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
