--- a/VRChat/81/1282181.html
+++ b/VRChat/81/1282181.html
@@ -71,9 +71,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "l4xmnBl6xuD8dnR9hhG9s/k+4NDj11vtFmYlMx+Sx5w="></script>
+    "L7LvOIE0TJOednDqVRf1c5fDk08zTnWIVwwd9pyp6jc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"葉巻（△378）","description":"葉巻の3Dモデル（Unity用）","url":"https://booth.pm/ja/items/1282181","offers":{"priceCurrency":"JPY","@type":"Offer","price":"128"},"image":"https://booth.pximg.net/c/620x620/35eda33f-5f5b-4dec-bda5-d25adcc391d1/i/1282181/c62431e7-3106-4100-a0c3-c9003eb8945a_base_resized.jpg"}
     </script>
@@ -87,7 +87,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="l4xmnBl6xuD8dnR9hhG9s/k+4NDj11vtFmYlMx+Sx5w="></script>
+    nonce="L7LvOIE0TJOednDqVRf1c5fDk08zTnWIVwwd9pyp6jc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -111,6 +111,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -154,7 +156,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1282181/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               63
@@ -169,14 +171,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1282181/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               63
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
